# AI-Rag-Assistant-V2

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  dvc.yaml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: rag.yaml  selected_experiment.yaml
data/embeddings/: embeddings.npy.dvc  metadata.json.dvc
data/processed/chunks/: chunks.jsonl.dvc
data/processed/pages/: .gitignore  pages.jsonl.dvc
data/raw/: Gale-Encyclopedia.pdf.dvc
src/api/: main.py
src/cleaning/: clean.py
src/embeddings/: embed.py  store.py
src/evaluation/: experiments.py  metrics.py  select_best.py
src/ingestion/: ingest.py
src/rag/: chain.py  guardrails.py  prompts.py
src/retrieval/: bm25.py  hybrid.py
src/ui/: app.py
src/utils/: config.py  logging.py  runtime_config.py
tests/integration/: test_retrieval.py
tests/unit/: test_cleaning.py  test_ingestion.py  test_rag_chain.py
